fixed spacing issu

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -934,6 +934,9 @@ video {
 .h-11 {
   height: 2.75rem;
 }
+.h-12 {
+  height: 3rem;
+}
 .h-24 {
   height: 6rem;
 }
@@ -987,9 +990,6 @@ video {
 }
 .h-screen {
   height: 100vh;
-}
-.h-12 {
-  height: 3rem;
 }
 .max-h-0 {
   max-height: 0px;
@@ -1311,6 +1311,12 @@ video {
 .border-transparent {
   border-color: transparent;
 }
+.border-primary\/60 {
+  border-color: rgb(34 102 141 / 0.6);
+}
+.border-primary\/50 {
+  border-color: rgb(34 102 141 / 0.5);
+}
 .bg-\[\#F6F5F2\] {
   --tw-bg-opacity: 1;
   background-color: rgb(246 245 242 / var(--tw-bg-opacity));
@@ -1341,6 +1347,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
+.bg-light-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 51 51 / var(--tw-bg-opacity));
+}
 .bg-primary {
   --tw-bg-opacity: 1;
   background-color: rgb(34 102 141 / var(--tw-bg-opacity));
@@ -1355,10 +1365,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-light-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(51 51 51 / var(--tw-bg-opacity));
 }
 .bg-\[url\(\'\/public\/images\/background\/bg-second-img\.svg\'\)\] {
   background-image: url('/public/images/background/bg-second-img.svg');
@@ -1480,6 +1486,10 @@ video {
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
 .pb-3 {
   padding-bottom: 0.75rem;
 }
@@ -1518,6 +1528,9 @@ video {
 }
 .pt-7 {
   padding-top: 1.75rem;
+}
+.pb-5 {
+  padding-bottom: 1.25rem;
 }
 .text-left {
   text-align: left;
@@ -1650,6 +1663,10 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-light-black {
+  --tw-text-opacity: 1;
+  color: rgb(51 51 51 / var(--tw-text-opacity));
 }
 .line-through {
   text-decoration-line: line-through;
@@ -2774,9 +2791,6 @@ header .menu li.menu-open .menu-icon {
   .sm\:h-\[450px\] {
     height: 450px;
   }
-  .sm\:h-12 {
-    height: 3rem;
-  }
   .sm\:w-1\/2 {
     width: 50%;
   }
@@ -3029,6 +3043,15 @@ header .menu li.menu-open .menu-icon {
   .md\:pr-6 {
     padding-right: 1.5rem;
   }
+  .md\:pl-4 {
+    padding-left: 1rem;
+  }
+  .md\:pl-12 {
+    padding-left: 3rem;
+  }
+  .md\:pl-20 {
+    padding-left: 5rem;
+  }
   .md\:text-center {
     text-align: center;
   }
@@ -3263,6 +3286,9 @@ header .menu li.menu-open .menu-icon {
   }
   .lg\:pl-\[117px\] {
     padding-left: 117px;
+  }
+  .lg\:pl-20 {
+    padding-left: 5rem;
   }
   .lg\:text-3xl {
     font-size: 1.875rem;
